Add living creatures section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,9 @@ nav:
   - Fundamentals:
     - vilix.md
     - dimension.md
+  - Living creatures:
+    - human.md
+    - thermovore.md
   - About: about.md
 theme:
   name: material
