--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ nav:
   - Fundamentals:
     - vilix.md
     - dimension.md
-  - Living creatures:
+  - Vilins:
     - human.md
     - thermovore.md
   - About: about.md
