--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - unbound_soul.md
     - thermovore.md
   - About: about.md
+  - Test: test/*
 theme:
   name: material
   features:
@@ -24,3 +25,7 @@ theme:
 plugins:
   - tags
   - search
+markdown_extensions:
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
